--- a/index.html
+++ b/index.html
@@ -1,35 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>@cambanmon's chase cards</title>
   <style>
-    body { font-family: sans-serif; margin:0; padding:2rem; background:#f5f5f5; }
-    h1 { text-align:center; color:#333; }
-    .grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(180px,1fr)); gap:16px; }
-    .card { background:#fff; border-radius:8px; padding:12px; box-shadow:0 2px 6px rgba(0,0,0,0.08); text-align:center; transition:transform .2s; }
-    .card:hover { transform:scale(1.04); }
-    .card img { max-width:100%; border-radius:4px; }
-    .card h2 { font-size:1rem; margin:8px 0 4px; color:#222; }
-    .card p { font-size:.85rem; color:#666; margin:0; }
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; padding: 2rem; background: #f8f8f8; }
+    h1 { text-align: center; margin-bottom: 1rem; color: #333; }
+    .controls { text-align: center; margin-bottom: 1rem; }
+    .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 20px; }
+    .card { background: white; border-radius: 10px; padding: 1rem; box-shadow: 0 4px 8px rgba(0,0,0,0.1); text-align: center; transition: transform 0.2s; }
+    .card:hover { transform: scale(1.03); }
+    .card img { max-width: 100%; border-radius: 6px; }
+    .card h2 { font-size: 1.1rem; margin: 0.5rem 0 0.25rem; color: #111; }
+    .card p { font-size: 0.9rem; color: #666; margin: 0; }
+    form { margin: 1rem auto; max-width: 600px; display: flex; flex-direction: column; gap: 10px; background: #fff; padding: 1rem; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
+    input, button, select { padding: 0.5rem; font-size: 1rem; border-radius: 4px; border: 1px solid #ccc; }
+    button { cursor: pointer; background: #222; color: #fff; border: none; transition: background 0.2s; }
+    button:hover { background: #444; }
   </style>
 </head>
 <body>
   <h1>Pokémon Card Wishlist</h1>
+  <div class="controls">
+    <label for="setFilter">Filter by set:</label>
+    <select id="setFilter">
+      <option value="all">All Sets</option>
+    </select>
+  </div>
   <div id="grid" class="grid"></div>
+
+  <h2 style="text-align:center">Add a New Card (Admin Tool)</h2>
+  <form id="addCardForm">
+    <input type="text" id="cardName" placeholder="Card Name" required>
+    <input type="url" id="cardImage" placeholder="Image URL" required>
+    <input type="text" id="cardSet" placeholder="Set Name" required>
+    <button type="submit">Add Card</button>
+  </form>
+
   <script>
-    fetch('cards.json').then(r => r.json()).then(cards => {
+    let allCards = [];
+
+    function renderCards(cards) {
       const grid = document.getElementById('grid');
-      cards.forEach(c => {
+      grid.innerHTML = '';
+      cards.forEach(card => {
         const div = document.createElement('div');
         div.className = 'card';
         div.innerHTML = `
-          <img src="${c.image}" alt="${c.name}" />
-          <h2>${c.name}</h2>
-          <p>${c.set}</p>`;
+          <img src="${card.image}" alt="${card.name}" />
+          <h2>${card.name}</h2>
+          <p>${card.set}</p>
+        `;
         grid.appendChild(div);
       });
+    }
+
+    function updateSetFilter(cards) {
+      const sets = [...new Set(cards.map(c => c.set))].sort();
+      const setFilter = document.getElementById('setFilter');
+      sets.forEach(set => {
+        const option = document.createElement('option');
+        option.value = set;
+        option.textContent = set;
+        setFilter.appendChild(option);
+      });
+    }
+
+    fetch('cards.json')
+      .then(res => res.json())
+      .then(cards => {
+        allCards = cards;
+        renderCards(cards);
+        updateSetFilter(cards);
+      });
+
+    document.getElementById('setFilter').addEventListener('change', (e) => {
+      const selectedSet = e.target.value;
+      if (selectedSet === 'all') {
+        renderCards(allCards);
+      } else {
+        renderCards(allCards.filter(card => card.set === selectedSet));
+      }
+    });
+
+    document.getElementById('addCardForm').addEventListener('submit', (e) => {
+      e.preventDefault();
+      const name = document.getElementById('cardName').value;
+      const image = document.getElementById('cardImage').value;
+      const set = document.getElementById('cardSet').value;
+      const newCard = { name, image, set };
+      allCards.push(newCard);
+      renderCards(allCards);
+      document.getElementById('addCardForm').reset();
     });
   </script>
 </body>
